fixed button wrapping issue

--- a/style.css
+++ b/style.css
@@ -38,9 +38,9 @@ p {
 button {
   background-color: #1f8d58;
   border: none;
-  font-size: 16px;
+  font-size: 14px;
   color: white;
-  padding: 10px 20px;
+  padding: 5px 10px;
   border-radius: 4px;
   outline: none;
 }
